// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header title should match snapshot for NetworkSelect 1`] = `
<View
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <Text
    style={
      [
        {},
        [
          {},
          {},
        ],
      ]
    }
  >
    Foo
  </Text>
  <View
    style={{}}
  >
    <Text />
    <View
      style={{}}
    >
      <Text
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
        testID="header_active_network"
      >
        Playground
      </Text>
    </View>
  </View>
</View>
`;

exports[`Header title should match snapshot for Status 1`] = `
<View
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <Text
    style={
      [
        {},
        [
          {},
          {},
        ],
      ]
    }
  >
    Foo
  </Text>
  <View
    style={{}}
  >
    <View
      style={{}}
      testID="header_status_indicator"
    />
    <View
      style={{}}
    >
      <Text
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
        testID="header_active_network"
      >
        Playground
      </Text>
    </View>
  </View>
</View>
`;
